# Dockyard

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md
data/: dev.miguelrincon.Dockyard.desktop
docs/design/: 0.2-create-edit-podman.md
src/: app.rs  main.rs  settings.rs
src/components/: container_detail.rs  container_row.rs  logs_page.rs  logs_view.rs  mod.rs  sparkline.rs  status_chip.rs
src/docker/: client.rs  mod.rs  types.rs
