[package]
name = "dockyard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bollard = "0.21"
futures-util = "0.3"
# `gnome_45` == libadwaita 1.4, the minimum for adw::ToolbarView and
# adw::NavigationView. Bumping this raises the libadwaita version users need.
relm4 = { version = "0.11", features = ["libadwaita", "gnome_45"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
